0.8.0 (currently working on)
- [#3151] Fix: SQL error on the registration page with latest static_info_tables
- [#3142] Fix: Test failures with base64 encoding
- [#2234] Change: Use $GLOBALS['SIM_ACCESS_TIME'] instead of time() in seminars
- [#3128] Change: Remove the referrer field from the registrations
- [#557] Change: Use Tabs for the BE edit form of registration records
- [#1967] Change: In the registration TCEforms, put the billing address data in a tab "billing address"
- [#3080] Change: Use the object factory
- [#3000] Fix: Intval showUid
- [#3050] Change: In the flexforms tab "list view", use the GRSP settings when selecting records
- [#3007] Fix: Add attached_files to hideFields
- [#2701] Fix: Image of a seminar was not displayed in single view
- [#2994] Fix: Check if the data for the seminars is loaded from general storage PID
- [#2610] Change: Polish the BE events list
- [#2965] Change: Hide the partner integration and the new prices in the 0.8.x branch before the beta
- [#2953] Fix: Use TYPO3's wrapper for the multibyte string functions
- [#2971] Fix: Crash/SQL error in the list view if the static template is not included
- [#2956] Fix: Two tests failures in seminars_pi1 testcase
- [#2963] Fix: Registration crashes with fatal error
- [#2923] Feature: In the list view, show registration begin date for events with registration_begin_date in future
- [#2961] Fix: Remove the patch already checked in Bug 2936 from branch.
- [#2922] Feature: Hide the registration link in the list view when registration_begin_date is in future
- [#2488] Fix: Test failure testTypoScriptConfigurationIsLoaded
- [#2925] Feature: Show the organizers description in the single view, if not empty
- [#2954] Change: Move locallang_csh_seminars.xml to Resources/Private/Language/locallang_csh_seminars.xml
- [#1680] Remove the XCLASS for t3lib_tcemain
- [#2711] Fix: $BE_USER needs to be marked as global in tx_seminars_flexForms::__construct
- [#961] Change: Require TYPO3 4.2