@@ -1,4 +1,5 @@
 0.8.0 (currently working on)
+- [#3146] Fix: $uid is not initialized in registration::setRegistrationData
 - [#3151] Fix: SQL error on the registration page with latest static_info_tables
 - [#3142] Fix: Test failures with base64 encoding
 - [#2234] Change: Use $GLOBALS['SIM_ACCESS_TIME'] instead of time() in seminars
